--- a/express/package.json
+++ b/express/package.json
@@ -15,7 +15,7 @@
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   },
-  "main": "app.js",
+  "main": "./bin/www",
   "devDependencies": {},
   "author": "",
   "license": "ISC",
